# galaxy-project

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: coverage.yml  test.yml
API_draft/: README.md
app/: README 2.md  classification.py  data_augmentation.py  data_extraction.py  interactive_visualization.py  preprocessing.py  visualization.py  wavelength_alignment.py
app/patapoufs_in_the_stars.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/patapoufsinthestars/: README.md  classification.py  data_augmentation.py  data_extraction.py  interactive_visualization.py  preprocessing.py  visualization.py  wavelength_alignment.py
app/patapoufsinthestars.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: conf.py  data_augmentation.rst  demo.ipynb  index.rst  milestone4.md  milestone5.md  output.csv
docs/_build/doctrees/: classification.doctree  data_augmentation.doctree  data_extraction.doctree  environment.pickle  index.doctree  interactive_visualization.doctree  modules.doctree  preprocessing.doctree  visualization.doctree  wavelength_alignment.doctree
docs/_build/html/: .buildinfo  classification.html  data_augmentation.html  data_extraction.html  genindex.html  index.html  interactive_visualization.html  modules.html  objects.inv  preprocessing.html  py-modindex.html  search.html  searchindex.js  visualization.html  wavelength_alignment.html
docs/_build/html/_sources/: modules.rst.txt  wavelength_alignment.rst.txt
test/: test_classification.py  test_classification_integration.py  test_data_augmentation.py  test_data_augmentation_int.py  test_data_extraction.py  test_interactive_visualization.py  test_interactive_visualization_integration.py  test_preprocessing.py  test_preprocessing_integration.py  test_visualization.py  test_visualization_integration.py  test_wavelength_alignment.py  test_wavelength_alignment_int.py
test/data/: test_dataset.csv
