[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "patapoufs_in_the_stars"
version = "1.4.0"
authors = [
  { name="Patapoufs&co", email="alexandra_ramassamy@fas.harvard.edu" },
]
description = "CS107/AC207 final project package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "astropy",
    "astropy-iers-data",
    "astroquery",
    "cryptography",
    "iniconfig",
    "ipywidgets",
    "joblib",
    "jupyter_client",
    "jupyter_core",
    "jupyterlab-widgets",
    "matplotlib",
    "matplotlib-inline",
    "more-itertools",
    "numpy",
    "pandas",
    "prompt-toolkit",
    "pyparsing",
    "pytest-astropy-header",
    "scikit-learn",
    "scipy",
]

[project.urls]
"Homepage" = "https://code.harvard.edu/CS107/team19_2023"