[options]
package_dir =
    =app
packages = find:

[options.packages.find]
where = app
; for our test package we chose to put the source code into `src`
; required to automatically find our package in `src`
; additional package dependencies (examples)
; minimum Python version requirement (example)
; package requires numpy (example)
; additional config required for find above